[package]
name = "rgl"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
gl = "0.14.0"
bitflags = "1.3.2"

[dev-dependencies]
anyhow = "1.0"
image = "0.24"
itertools = "0.10"
russimp = "2.0"
sdl2 = { version = "0.35", features = ["bundled", "static-link"] }
nalgebra-glm = "0.18"